--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "water-delivery",
   "version": "0.0.1",
-  "description": "",
+  "description": ".",
   "main": "index.js",
   "type": "module",
   "scripts": {
