fix: update .env file

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_PORT=5433
-DB_USERNAME=water-delivery
-DB_PASSWORD=docker
-DB_DATABASE=waterdelivery
+PG_USER=root
+PG_PASSWORD=docker
+PG_DATABASE=water-delivery
+PG_HOST=localhost
+PG_PORT=5432
 PORT=5333
